Fix the overlapping text on the mobile display

--- a/styles/results.scss
+++ b/styles/results.scss
@@ -49,3 +49,9 @@ footer {
     color: $dark-font-hover;
   }
 }
+
+@media only screen and (max-width: 425px) {
+  p.date {
+    margin-bottom: 40px;
+  }
+}
